# resonances

./: .cursorrules  .flake8  .gitignore  404.html  CITATION.cff  CNAME  LICENSE  Makefile  README.md  config.json  example_secular_final.py  example_usage_1.py  example_usage_2.py  example_usage_3.py  example_usage_4.py  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
about/: index.html
config/: index.html
console/: index.html
core/: index.html
dev/: index.html
docs/: about.md  config.md  console.md  core.ipynb  dev.md  examples.ipynb  index.md  install.md  libration.md  matrix.md  quick-start.ipynb  secular.md
docs/examples/: asteroids.json  identification.json  libration-edge-cases.json  simulation-shape.json
examples/: asteroids.json  index.html
install/: index.html
libration/: index.html
matrix/: index.html
quick-start/: index.html
resonances/: .env.dist  __init__.py  __main__.py  app.py  body.py  config.json  config.py  console.py  finder.py  horizons.py  logger.py  secular_finder.py  simulation.py  util.py
resonances/console/: console.py  identify.py  simulation.py
resonances/data/: astdys.py  const.py  loader.py  util.py
resonances/experiment/: console.py  finder.py  loader.py  shape.py
resonances/finder/: __init__.py  finder.py  mmr_finder.py  secular_finder.py
resonances/matrix/: matrix.py  secular_matrix.py  secular_resonances.py  three_body_matrix.py  two_body_matrix.py
resonances/resonance/: __init__.py  factory.py  integration.py  libration.py  mmr.py  plot.py  resonance.py  secular.py  three_body.py  two_body.py
resonances/simulation/: __init__.py  body_manager.py  config.py  data_manager.py  integration.py  shape.py  simulation.py  structure.py
resonances/test/: my.py
secular/: index.html
tests/: test_app.py  test_backward.py  test_finder.py  test_nasa.py  test_real_mmrs.py  test_real_sim.py  tools.py
tests/fixtures/: small.cat  small.csv
tests/resonance/: test_circulation.py  test_libration.py  test_three_body.py
tests/resonance/fixtures/: apocentric.csv  fp.csv  pure.csv  transient.csv
tests/resonances/: __init__.py  test_body.py  test_config.py  test_finder.py  test_simulation.py  test_util.py
tests/resonances/data/: test_astdys.py  test_util.py
tests/resonances/matrix/: test_factory_integration.py  test_secular_matrix.py  test_three_body_matrix.py  test_two_body_matrix.py
tests/resonances/mmr/: __init__.py  test_finder_check.py
tests/resonances/plot/: __init__.py  test_plot_round.py
tests/resonances/resonance/: test_circulation.py  test_create_resonance.py  test_factory.py  test_filtering.py  test_libration.py  test_mmr.py  test_plot.py  test_three_body.py  test_two_body.py
tests/resonances/secular/: __init__.py  test_secular_calculations.py  test_secular_check.py  test_secular_finder_check.py  test_secular_finder_find.py
tests/resonances/simulation/: __init__.py  test_body_manager.py  test_config.py  test_config_core_validation.py  test_config_propagation.py  test_data_manager.py  test_integration.py  test_runtime_config_validation.py  test_simulation.py  test_simulation_integration.py
