[tool.poetry]
name = "resonances"
version = "0.4.0"
description = "Identification of mean-motion resonances"
authors = ["Evgeny Smirnov <smirik@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "http://smirik.github.io/resonances/"
repository = "https://github.com/smirik/resonances"
documentation = "http://smirik.github.io/resonances/"
keywords = ["astronomy", "nbody", "resonance", "mmr"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^2.0.1"
scipy = "^1.14.0"
pandas = "^2.2.0"
matplotlib = "^3.6.3"
seaborn = "^0.13.2"
astropy = "^6.1.2"
rebound = "^3.23.2"
# rebound = "^4.4.2"
astdys = ">=0.9.2"
mkdocs = "1.4.2"
mkdocs-jupyter = "0.22.0"
lxml-html-clean = "^0.1.1"
tqdm = "^4.66.5"

[tool.poetry.dev-dependencies]
pytest = "^8.3.1"
mkdocs = "^1.4.2"
mkdocs-jupyter = "^0.22.0"
black = "^24.4.2"
flake8 = "^7.0.0"
flake8-bugbear = "^24.4.26"
coverage = "^7.6.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[tool.coverage.run]
omit = [".*", "tests/resonances/*", "*/site-packages/*"]

[tool.pytest.ini_options]
testpaths = ["tests/resonances"]
filterwarnings = [
    "ignore::DeprecationWarning:rebound",
    "ignore::RuntimeWarning:rebound.horizons",
]
[tool.coverage.report]
fail_under = 80
omit = [".*", "tests/resonances/*", "*/site-packages/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
skip-string-normalization = true
